fix: add function date to main.js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-
     <time id="time"></time>
+    <span id="date"></span>
+
     <h1>
         <span id="greeting"></span>
         <span id="name" contenteditable="true"></span>
@@ -19,6 +20,7 @@
 
     <h2>What Is Your Focus For Today?</h2>
     <h2 id="focus" contenteditable="true"></h2>
+
 
     <script src="main.js"></script>
 </body>
