--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Dynamic Landing Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <time id="time"></time>
     <span id="date"></span>
 
     <h1>
-        <span id="greeting"></span>
-        <span id="name" contenteditable="true"></span>
+      <span id="greeting"></span>
+      <span id="name" contenteditable="true"></span>
     </h1>
 
     <h2>What Is Your Focus For Today?</h2>
     <h2 id="focus" contenteditable="true"></h2>
 
-
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
-
